Update for recent photutils
Several imports have changed, and the steps for making a source
mask are no longer wrapped in a convenience function.

--- a/notebooks/photometry/01.01-Background-removal-(for-source-detection).ipynb
+++ b/notebooks/photometry/01.01-Background-removal-(for-source-detection).ipynb
@@ -26,7 +26,7 @@
     "\n",
     "The simplest way to estimate the background is with a single number, perhaps the mean or median of the data. The problem with that approach is that the distribution of pixel value in an astronomical image is not symmetric. Most of the pixels have values near zero while a small number have significantly higher values.\n",
     "\n",
-    "The [photutils] documentation on [scalar background and noise estimation](https://photutils.readthedocs.io/en/stable/background.html#scalar-background-and-noise-estimation) walk through this step-by-step, demonstrating the result you get with a variety of background estimators.\n",
+    "The [photutils](https://photutils.readthedocs.io/en/stable/index.html) documentation on [scalar background and noise estimation](https://photutils.readthedocs.io/en/stable/background.html#scalar-background-and-noise-estimation) walk through this step-by-step, demonstrating the result you get with a variety of background estimators.\n",
     "\n",
     "The upshot is that the best estimate of the background is obtained by first masking the sources in the image and then sigma clipping the unmasked parts of the data. The mean and median of the unmasked parts of the image give almost exactly the same value, and standard deviation recovered from the  data matches that of the input."
    ]
@@ -55,9 +55,10 @@
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "from photutils.background import Background2D, MeanBackground, MADStdBackgroundRMS\n",
     "from photutils.datasets import make_100gaussians_image\n",
-    "from photutils import Background2D, MeanBackground, MADStdBackgroundRMS\n",
-    "from photutils\n",
+    "from photutils.segmentation import detect_threshold, detect_sources\n",
+    "from photutils.utils import circular_footprint\n",
     "\n",
     "from astropy.visualization import SqrtStretch\n",
     "from astropy.visualization.mpl_normalize import ImageNormalize\n",
@@ -77,7 +78,7 @@
    "source": [
     "There are a couple of things to note about this distrubtion. \n",
     "\n",
-    "The bulk of the pixel values are noise. The function `make_100gaussians_image` adds a background with a Gaussian distribution centered at 5 with a standard deviation of 2. The long tail at higher pixel values are from the sources in the image."
+    "The bulk of the pixel values are noise. The function [`make_100gaussians_image`](https://photutils.readthedocs.io/en/stable/api/photutils.datasets.make_100gaussians_image.html#photutils.datasets.make_100gaussians_image) adds a background with a Gaussian distribution centered at 5 with a standard deviation of 2. The long tail at higher pixel values are from the sources in the image."
    ]
   },
   {
@@ -105,7 +106,7 @@
    "source": [
     "### Estimating the background value\n",
     "\n",
-    "The plot below shows the result of several ways of estimating the background from the data. "
+    "The plot below shows the result of several ways of estimating the background from the data. None of these straightforward estimates give a good measure of the true background level, indicated by the green line."
    ]
   },
   {
@@ -131,6 +132,8 @@
     "\n",
     "# Add line to chart\n",
     "plt.axvline(clipped_med, label='Sigma-clipped median', color='yellow')\n",
+    "plt.xlabel('Pixel value')\n",
+    "plt.ylabel('Number of pixels')\n",
     "plt.legend();"
    ]
   },
@@ -147,7 +150,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "std"
+    "clipped_std"
    ]
   },
   {
@@ -156,7 +159,9 @@
    "source": [
     "### Best approach for single value\n",
     "\n",
-    "The best approach to deriving a single value to use for background is to first mask the sources; photutils provides a convenience function for that. Once that mask is applied, the true mean and noise level are recovered with reasonable accuracy."
+    "The best approach to deriving a single value to use for background is to first mask the sources. There are a few steps to doing that.\n",
+    "\n",
+    "First, define the sigma clip parameters for deticting the threshold for sources"
    ]
   },
   {
@@ -165,7 +170,66 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "source_mask = make_source_mask(data, snr=2, npixels=5)\n",
+    "sigma_clip = SigmaClip(sigma=3.0, maxiters=10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, find pixels more that 2$\\sigma$ above the background using [`detect_threshold`](https://photutils.readthedocs.io/en/stable/api/photutils.segmentation.detect_threshold.html#photutils.segmentation.detect_threshold)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "threshold = detect_threshold(data, nsigma=2.0, sigma_clip=sigma_clip)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "These pixels may be isolated or disconnected. The function [`detect_sources`](https://photutils.readthedocs.io/en/stable/api/photutils.segmentation.detect_sources.html#photutils.segmentation.detect_sources)\n",
+    " creates a segmentation image, in which only connected sets of `npixels` or more pixels are identified as sources."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "segment_img = detect_sources(data, threshold, npixels=10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, we use [`make_source_mask`](https://photutils.readthedocs.io/en/stable/api/photutils.segmentation.SegmentationImage.html#photutils.segmentation.SegmentationImage.make_source_mask) to create a mask that is `True` where there are sources. It masks out a circular region 10 pixels in size at each source."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "footprint = circular_footprint(radius=10)\n",
+    "\n",
+    "source_mask = segment_img.make_source_mask(footprint=footprint)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "mask_clip_mean, mask_clip_med, mask_clip_std  = sigma_clipped_stats(data, sigma=3, mask=source_mask)\n",
     "\n",
     "plt.figure(figsize=(10, 5))\n",
@@ -242,7 +306,7 @@
     "# Parameters below match those used in sigma_clipped_stats above. The \n",
     "# default in photutils is sigma=3, iters=10; this default is used unless\n",
     "# you override it as shown below.\n",
-    "sigma_clip = SigmaClip(sigma=3., iters=5)\n",
+    "sigma_clip = SigmaClip(sigma=3., maxiters=5)\n",
     "\n",
     "# Choose your background calculation method\n",
     "bg_estimator = MeanBackground()\n",
@@ -329,7 +393,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
