Adding contributor name.

--- a/notebooks/00-00-Preface.ipynb
+++ b/notebooks/00-00-Preface.ipynb
@@ -127,6 +127,7 @@
     "+ Lia Corrales\n",
     "+ Kelle Cruz\n",
     "+ Adam Ginsburg\n",
+    "+ Johannes Goller\n",
     "+ Yash Gondhalekar\n",
     "+ Lia G\n",
     "+ Richard Hendricks\n",
