--- a/v/dev/_sources/notebooks/01-04-Nonuniform-sensitivity.ipynb
+++ b/v/dev/_sources/notebooks/01-04-Nonuniform-sensitivity.ipynb
@@ -178,8 +178,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_image2 = bias_only + noise_only + dark_only + flat * (isim.sky_background(image, 100 * sky_counts, gain=gain) + stars_only)\n",
-    "show_image(final_image2, cmap='gray')"
+    "final_image2 = bias_only + noise_only + dark_only + flat * (isim.sky_background(image, 3000 * sky_counts, gain=gain) + stars_only)\n",
+    "show_image(final_image2, cmap='gray', percu=99.9)"
    ]
   },
   {
