Tidy up language and add another plot

--- a/notebooks/photometry/01.01-Background-removal-(for-source-detection).ipynb
+++ b/notebooks/photometry/01.01-Background-removal-(for-source-detection).ipynb
@@ -89,8 +89,8 @@
    "source": [
     "plt.figure(figsize=(10, 5))\n",
     "\n",
-    "# IMPORTANT NOTE: flattening the data to one dimension vastly reduces the \n",
-    "# time it takes to histogram the data. \n",
+    "# IMPORTANT NOTE: flattening the data to one dimension vastly reduces the\n",
+    "# time it takes to histogram the data.\n",
     "\n",
     "h, bins, patches = hist(data.flatten(), bins='freedman', log=True,\n",
     "                        alpha=0.5, label='Pixel values')\n",
@@ -118,7 +118,7 @@
     "plt.figure(figsize=(10, 5))\n",
     "hist(data.flatten(), bins='freedman', log=True,\n",
     "                        alpha=0.5, label='Pixel values')\n",
-    "plt.xlim(4, 7)\n",
+    "plt.xlim(0, 10)\n",
     "\n",
     "true_mean = 5\n",
     "avg_all_pixels = data.mean()\n",
@@ -141,7 +141,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "None of the estimates above do a particularly good job of estimating the true background level. They also do not do a great job of estimating the error or noise in that background; the input value was 2, but the value produced by sigma clipping is larger:"
+    "None of the estimates above do a particularly good job of estimating the true background level. They also do not do a great job of estimating the error or noise in that background; the input value was 2, but the value produced by sigma clipping is 5% larger:"
    ]
   },
   {
@@ -235,13 +235,13 @@
     "plt.figure(figsize=(10, 5))\n",
     "hist(data.flatten(), bins='freedman', log=True,\n",
     "                        alpha=0.5, label='Pixel values')\n",
-    "plt.xlim(4, 7)\n",
+    "plt.xlim(0, 10)\n",
     "\n",
     "plt.axvline(true_mean, label='True mean of background', color='green')\n",
     "plt.axvline(avg_all_pixels, label='Mean of all values', color='red')\n",
     "plt.axvline(median_all_pixels, label='Median of all values', color='cyan')\n",
     "plt.axvline(clipped_med, label='Sigma-clipped median', color='yellow')\n",
-    "plt.axvline(mask_clip_med, label='Sigma-clipped, sources masked', \n",
+    "plt.axvline(mask_clip_med, label='Sigma-clipped, sources masked',\n",
     "            color='violet', linestyle='dashed')\n",
     "plt.legend();"
    ]
@@ -252,12 +252,12 @@
    "source": [
     "## Two dimensional background \n",
     "\n",
-    "If the background is not uniform (as happens, for example, on a night with moonlight) then using a single value to represent that background will not be effective. Instead, one constructs a background array; it is constructed by breaking the image into pieces, calcuating a scalar background estimate as above, and building those back into a two-dimensional image. \n",
+    "If the background is not uniform (as happens, for example, on a night with moonlight) then using a single value to represent that background will not be effective. Instead, one constructs a background array. It is constructed by breaking the image into pieces, calcuating a scalar background estimate as above, and building those back into a two-dimensional image. \n",
     "\n",
     "To do this with photutils requires making a few choices:\n",
     "\n",
     "+ *What should the mesh size be?* This is the size, in pixels, of the chunks into which the image will be split for generating the background. It should be larger than the sources in the image, but small enough to represent variation in background across the image.\n",
-    "+ *How should the background in each mesh cell be calculated?* The full suite of options is listed in the [photutils documentation for 2D backgrounds](https://photutils.readthedocs.io/en/stable/background.html#d-background-and-noise-estimation). The example below uses the mean because the sources will be masked as in the scalar case. Other options include the median and `SExtractorBackground` for using the background method used by SExtractor.\n",
+    "+ *How should the background in each mesh cell be calculated?* The full suite of options is listed in the [photutils documentation for 2D backgrounds](https://photutils.readthedocs.io/en/stable/background.html#d-background-and-noise-estimation). The example below uses the mean because the sources will be masked as in the scalar case. Other options include the median and `SExtractorBackground` for using the background method used by [Source Extractor](https://astromatic.github.io/sextractor/).\n",
     "+ *Do you want to also estimate the noise in the background, i.e. the RMS of the background?* Again, several options are available.\n",
     "+ *How do you want the background image interpolated when it is scaled back up to the size of the input image?* By default spline interpolation is used, but it can be changed.\n"
    ]
@@ -268,7 +268,7 @@
    "source": [
     "### Add some background to the input image\n",
     "\n",
-    "As with the rest of the examples in this notebook, we closely follow the example from the photutils documentation."
+    "As with the rest of the examples in this notebook, we closely follow the example from the photutils documentation. The gradient added here might resemble what you would ee on a moonlit night near the moon."
    ]
   },
   {
@@ -283,7 +283,9 @@
     "gradient = x / 50.\n",
     "gradient_median = np.median(gradient)\n",
     "data2 = data + gradient\n",
-    "plt.imshow(data2, norm=norm, origin='lower', cmap='Greys_r')   "
+    "\n",
+    "plt.figure(figsize=(10, 5))\n",
+    "plt.imshow(data2, norm=norm, origin='lower', cmap='Greys_r')"
    ]
   },
   {
@@ -303,7 +305,7 @@
    "source": [
     "# Choose sigma clip parameters\n",
     "\n",
-    "# Parameters below match those used in sigma_clipped_stats above. The \n",
+    "# Parameters below match those used in sigma_clipped_stats above. The\n",
     "# default in photutils is sigma=3, iters=10; this default is used unless\n",
     "# you override it as shown below.\n",
     "sigma_clip = SigmaClip(sigma=3., maxiters=5)\n",
@@ -316,9 +318,9 @@
     "# in each directory.\n",
     "mesh_size = (ny // 10, nx // 10)\n",
     "\n",
-    "# Choose an estimator for the noise in the background (i.e. RMS). The \n",
+    "# Choose an estimator for the noise in the background (i.e. RMS). The\n",
     "# default is to use standard deviation using StdBackgroundRMS. This\n",
-    "# example uses the median absolute deviation for the purposes of \n",
+    "# example uses the median absolute deviation for the purposes of\n",
     "# illustration.\n",
     "bg_rms_estimator = MADStdBackgroundRMS()\n",
     "\n",
@@ -326,9 +328,9 @@
     "# mesh to the full size image. By not specifying that we get the default,\n",
     "# which is a spline interpolation; photutils calls this BgZoom\n",
     "\n",
-    "# Finally, construct the background. Each of the choices above are fed into \n",
-    "# the initialization of the background object. \n",
-    "bgd = Background2D(data2, mesh_size, \n",
+    "# Finally, construct the background. Each of the choices above are fed into\n",
+    "# the initialization of the background object.\n",
+    "bgd = Background2D(data2, mesh_size,\n",
     "                   sigma_clip=sigma_clip,\n",
     "                   bkg_estimator=bg_estimator,\n",
     "                   bkgrms_estimator=bg_rms_estimator,\n",
@@ -339,7 +341,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Display the background \n",
+    "### Display the background \n",
     "\n",
     "Though this is not required, we may as well check to see whether the inferred background matches the gradient in the x-direction that we added to the image."
    ]
@@ -350,6 +352,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plt.figure(figsize=(10, 5))\n",
     "plt.imshow(bgd.background, norm=norm, origin='lower', cmap='Greys_r')"
    ]
   },
@@ -370,10 +373,39 @@
    "source": [
     "back_sub_data = data2 - bgd.background\n",
     "\n",
-    "sub_mean, sub_med, sub_std  = sigma_clipped_stats(back_sub_data, \n",
+    "sub_mean, sub_med, sub_std  = sigma_clipped_stats(back_sub_data,\n",
     "                                                  sigma=3)\n",
     "\n",
     "print(sub_mean, sub_med, sub_std)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Background-subtracted image\n",
+    "\n",
+    "Finally, we display the background-subtracted image."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(10, 5))\n",
+    "plt.imshow(data2 - bgd.background, norm=norm, origin='lower', cmap='Greys_r')\n",
+    "plt.title('Background subtracted data')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary\n",
+    "\n",
+    "An image needs to be background-subtracted before you detect the sources in the image. That background can be represented by either a single number (e.g. the mean or median) or by a two-dimensional image. In both cases the best estimate of the background is obtained when sources are masked out before estimating the background. Though this means doing two rounds of source detection, one to estimate the background and one for the actual source detection, the method of finding sources used above is reasonably fast."
    ]
   }
  ],
