Several minor fixes for latest astropy/photutils

--- a/notebooks/photutils/01_background_estimation/01_background_estimation.ipynb
+++ b/notebooks/photutils/01_background_estimation/01_background_estimation.ipynb
@@ -145,9 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "mask = data == 0\n",
@@ -187,9 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Set up the figure with subplots\n",
@@ -255,9 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Set up the figure with subplots\n",
@@ -282,7 +276,7 @@
     "cbar.set_label(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')), \n",
     "               rotation=270, labelpad=30)\n",
     "ax2.set_xlabel('X (pixels)')\n",
-    "ax2.set_title('Masked Data')"
+    "ax2.set_title('Masked Data');"
    ]
   },
   {
@@ -345,8 +339,8 @@
     "\n",
     "# Plot histograms of the data\n",
     "flux_range = (-.5e-3, 1.5e-3)\n",
-    "ax1.hist(xdf_image[~xdf_image.mask], bins=100, range=flux_range)\n",
-    "ax2.hist(xdf_image[~xdf_image.mask], bins=100, range=flux_range)\n",
+    "ax1.hist(xdf_image.data[~xdf_image.mask], bins=100, range=flux_range)\n",
+    "ax2.hist(xdf_image.data[~xdf_image.mask], bins=100, range=flux_range)\n",
     "\n",
     "# Plot lines for each kind of mean\n",
     "ax1.axvline(mean, label='Masked and Clipped', c='C1', ls='-.', lw=3)\n",
@@ -463,7 +457,7 @@
    "source": [
     "The `Background2D` class allows users to model 2-dimensional backgrounds, by calculating the mean or median in small boxes, and smoothing these boxes to reconstruct a continuous 2D background. The class includes the following arguments/attributes:\n",
     "* **`box_size`** &mdash; the size of the boxes used to calculate the background. This should be larger than individual sources, yet still small enough to encompass changes in the background.\n",
-    "* **`filter_size`** &mdash; the size of the median filter used to smooth the final 2D background.\n",
+    "* **`filter_size`** &mdash; the size of the median filter used to smooth the final 2D background. The dimension should be odd along both axes.\n",
     "* **`filter_threshold`** &mdash; threshold below which the smoothing median filter will not be applied.\n",
     "* **`sigma_clip`** &mdash; an ` astropy.stats.SigmaClip` object that is used to specify the sigma and number of iterations used to sigma-clip the data before background calculations are performed.\n",
     "* **`bkg_estimator`** &mdash; the method used to perform the background calculation in each box (mean, median, SExtractor algorithm, etc.).\n",
@@ -488,7 +482,7 @@
    "source": [
     "sigma_clip = SigmaClip(sigma=3., maxiters=5)\n",
     "bkg_estimator = MeanBackground()\n",
-    "bkg = Background2D(xdf_image, box_size=200, filter_size=(10, 10), mask=xdf_image.mask,\n",
+    "bkg = Background2D(xdf_image, box_size=200, filter_size=(9, 9), mask=xdf_image.mask,\n",
     "                   sigma_clip=sigma_clip, bkg_estimator=bkg_estimator)"
    ]
   },
@@ -502,16 +496,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Set up the figure with subplots\n",
     "fig, ax1 = plt.subplots(1, 1, figsize=(8, 8))\n",
     "\n",
     "# Plot the background\n",
-    "background_clipped = np.clip(bkg.background, 1e-4, None) # clip to plot with logarithmic stretch\n",
+    "background_clipped = np.clip(bkg.background.data, 1e-4, None) # clip to plot with logarithmic stretch\n",
     "fitsplot = ax1.imshow(np.ma.masked_where(xdf_image.mask, background_clipped), norm=norm_image)\n",
     "\n",
     "# Plot the meshes\n",
@@ -527,7 +519,7 @@
     "               rotation=270, labelpad=30)\n",
     "ax1.set_xlabel('X (pixels)')\n",
     "ax1.set_ylabel('Y (pixels)')\n",
-    "ax1.set_title('2D Estimated Background')"
+    "ax1.set_title('2D Estimated Background');"
    ]
   },
   {
@@ -546,15 +538,13 @@
    "outputs": [],
    "source": [
     "# Calculate the 2D background subtraction, maintaining metadata, unit, and mask\n",
-    "xdf_2d_bkgdsub = xdf_image.subtract(bkg.background * u.electron / u.s)"
+    "xdf_2d_bkgdsub = xdf_image.subtract(bkg.background)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Set up the figure with subplots\n",
@@ -650,7 +640,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -664,9 +654,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
