Improve tick/label handling

--- a/notebooks/photutils/01_background_estimation/01_background_estimation.ipynb
+++ b/notebooks/photutils/01_background_estimation/01_background_estimation.ipynb
@@ -203,16 +203,20 @@
     "fitsplot = ax1.imshow(np.ma.masked_where(xdf_image.mask, xdf_image_clipped), \n",
     "                      norm=norm_image, cmap=cmap)\n",
     "\n",
-    "# Define the colorbar and fix the labels\n",
+    "# Define the colorbar... \n",
     "cbar = plt.colorbar(fitsplot, fraction=0.046, pad=0.04, ticks=LogLocator(subs=range(10)))\n",
-    "labels = ['$10^{-4}$'] + [''] * 8 + ['$10^{-3}$'] + [''] * 8 + ['$10^{-2}$']\n",
+    "cbar.ax.ticklabel_format(scilimits=(-2, -2), useOffset=False, useMathText=True, style='sci')\n",
+    "\n",
+    "# ...and force the labels to be displayed as powers of ten\n",
+    "cbar.ax.set_yticks([1e-4, 1e-3, 1e-2])\n",
+    "labels = [f'$10^{{{pow:.0f}}}$' for pow in np.log10(cbar.ax.get_yticks())]\n",
     "cbar.ax.set_yticklabels(labels)\n",
     "\n",
     "# Define labels\n",
     "cbar.set_label(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')), \n",
     "               rotation=270, labelpad=30)\n",
     "ax1.set_xlabel('X (pixels)')\n",
-    "ax1.set_ylabel('Y (pixels)')"
+    "ax1.set_ylabel('Y (pixels)');"
    ]
   },
   {
@@ -270,9 +274,14 @@
     "\n",
     "# Define the colorbar and fix the labels\n",
     "cbar_ax = fig.add_axes([1, 0.09, 0.03, 0.87])\n",
-    "cbar = fig.colorbar(fitsplot, cbar_ax, ticks=LogLocator(subs=range(10)))\n",
-    "labels = ['$10^{-4}$'] + [''] * 8 + ['$10^{-3}$'] + [''] * 8 + ['$10^{-2}$']\n",
+    "cbar = fig.colorbar(fitsplot, cbar_ax, ticks=LogLocator())\n",
+    "\n",
+    "# ...and force the labels to be displayed as powers of ten\n",
+    "cbar.ax.set_yticks([1e-4, 1e-3, 1e-2])\n",
+    "labels = [f'$10^{{{pow:.0f}}}$' for pow in np.log10(cbar.ax.get_yticks())]                \n",
     "cbar.ax.set_yticklabels(labels)\n",
+    "\n",
+    "\n",
     "cbar.set_label(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')), \n",
     "               rotation=270, labelpad=30)\n",
     "ax2.set_xlabel('X (pixels)')\n",
@@ -334,6 +343,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from photutils.segmentation import detect_threshold, detect_sources\n",
+    "from photutils.utils import circular_footprint\n",
+    "\n",
+    "sigma_clip = SigmaClip(sigma=3.0, maxiters=10)\n",
+    "threshold = detect_threshold(xdf_image.data, nsigma=2.0, sigma_clip=sigma_clip, mask=xdf_image.mask)\n",
+    "segment_img = detect_sources(xdf_image.data, threshold, npixels=10, mask=xdf_image.mask)\n",
+    "footprint = circular_footprint(radius=10)\n",
+    "\n",
+    "source_mask = segment_img.make_source_mask(footprint=footprint)\n",
+    "mask_clip_mean, mask_clip_med, mask_clip_std  = sigma_clipped_stats(data, sigma=3, mask=source_mask)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask_clip_mean, mask_clip_med"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Set up the figure with subplots\n",
     "fig, [ax1, ax2] = plt.subplots(1, 2, figsize=(12, 4), sharey=True)\n",
     "\n",
@@ -346,6 +382,7 @@
     "ax1.axvline(mean, label='Masked and Clipped', c='C1', ls='-.', lw=3)\n",
     "ax1.axvline(np.average(xdf_image[~xdf_image.mask]), label='Masked', c='C2', lw=3)\n",
     "ax1.axvline(stats_nomask[0], label='Clipped', c='C3', ls=':', lw=3)\n",
+    "ax1.axvline(mask_clip_mean, label='Sources masked and clipped', c='C4', lw=3)\n",
     "ax1.axvline(np.average(xdf_image), label='Neither', c='C5', ls='--', lw=3)\n",
     "\n",
     "ax1.set_xlim(flux_range)\n",
@@ -357,15 +394,17 @@
     "# Note: use np.ma.median rather than np.median for masked arrays\n",
     "ax2.axvline(median, label='Masked and Clipped', c='C1', ls='-.', lw=3)\n",
     "ax2.axvline(np.ma.median(xdf_image[~xdf_image.mask]), label='Masked', c='C2', lw=3)\n",
+    "ax2.axvline(mask_clip_med, label='Sources masked and clipped', c='C4', lw=3)\n",
     "ax2.axvline(stats_nomask[1], label='Clipped', c='C3', ls=':', lw=3)\n",
     "ax2.axvline(np.ma.median(xdf_image), label='Neither', c='C5', ls='--', lw=3)\n",
+    "\n",
     "\n",
     "ax2.set_xlim(flux_range)\n",
     "ax2.set_xlabel(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')), fontsize=14)\n",
     "ax2.set_title('Effect of Sigma-Clipping \\n and Masking on Median', fontsize=16)\n",
     "\n",
     "# Add legend\n",
-    "ax1.legend(fontsize=11, loc='lower center', bbox_to_anchor=(1.1, -0.45), ncol=2, handlelength=6)"
+    "ax1.legend(fontsize=11, loc='lower center', bbox_to_anchor=(1.1, -0.55), ncol=2, handlelength=6);"
    ]
   },
   {
@@ -411,11 +450,17 @@
     "ax2.set_xlabel('X (pixels)')\n",
     "ax2.set_title('Scalar Background-Subtracted Data')\n",
     "\n",
-    "# Define the colorbar and fix the labels\n",
+    "# Define the colorbar...\n",
     "cbar_ax = fig.add_axes([1, 0.09, 0.03, 0.87])\n",
-    "cbar = fig.colorbar(fitsplot, cbar_ax, ticks=LogLocator(subs=range(10)))\n",
-    "labels = ['$10^{-4}$'] + [''] * 8 + ['$10^{-3}$'] + [''] * 8 + ['$10^{-2}$']\n",
+    "\n",
+    "cbar = fig.colorbar(fitsplot, cbar_ax, ticks=LogLocator())\n",
+    "cbar.ax.yaxis.set_minor_locator(LogLocator(subs=range(1, 10)))\n",
+    "\n",
+    "# ...and force the labels to be displayed as powers of ten\n",
+    "cbar.ax.set_yticks([1e-4, 1e-3, 1e-2])\n",
+    "labels = [f'$10^{{{pow:.0f}}}$' for pow in np.log10(cbar.ax.get_yticks())]                \n",
     "cbar.ax.set_yticklabels(labels)\n",
+    "\n",
     "cbar.set_label(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')), \n",
     "               rotation=270, labelpad=30)"
    ]
@@ -510,8 +555,13 @@
     "bkg.plot_meshes(outlines=True, color='lightgrey')\n",
     "\n",
     "# Define the colorbar\n",
-    "cbar = plt.colorbar(fitsplot, fraction=0.046, pad=0.04, ticks=LogLocator(subs=range(10)))\n",
-    "labels = ['$10^{-4}$'] + [''] * 8 + ['$10^{-3}$'] + [''] * 8 + ['$10^{-2}$']\n",
+    "cbar = plt.colorbar(fitsplot, fraction=0.046, pad=0.04, ticks=LogLocator())\n",
+    "\n",
+    "cbar.ax.yaxis.set_minor_locator(LogLocator(subs=range(1, 10)))\n",
+    "\n",
+    "# ...and force the labels to be displayed as powers of ten\n",
+    "cbar.ax.set_yticks([1e-4, 1e-3, 1e-2])\n",
+    "labels = [f'$10^{{{pow:.0f}}}$' for pow in np.log10(cbar.ax.get_yticks())]                \n",
     "cbar.ax.set_yticklabels(labels)\n",
     "\n",
     "# Define labels\n",
@@ -567,11 +617,17 @@
     "ax2.set_xlabel('X (pixels)')\n",
     "ax2.set_title('2D Background-Subtracted Data')\n",
     "\n",
-    "# Plot the colorbar\n",
+    "# Define the colorbar...\n",
     "cbar_ax = fig.add_axes([1, 0.09, 0.03, 0.87])\n",
-    "cbar = fig.colorbar(fitsplot, cbar_ax, ticks=LogLocator(subs=range(10)))\n",
-    "labels = ['$10^{-4}$'] + [''] * 8 + ['$10^{-3}$'] + [''] * 8 + ['$10^{-2}$']\n",
+    "\n",
+    "cbar = fig.colorbar(fitsplot, cbar_ax, ticks=LogLocator())\n",
+    "cbar.ax.yaxis.set_minor_locator(LogLocator(subs=range(1, 10)))\n",
+    "\n",
+    "# ...and force the labels to be displayed as powers of ten\n",
+    "cbar.ax.set_yticks([1e-4, 1e-3, 1e-2])\n",
+    "labels = [f'$10^{{{pow:.0f}}}$' for pow in np.log10(cbar.ax.get_yticks())]                \n",
     "cbar.ax.set_yticklabels(labels)\n",
+    "\n",
     "cbar.set_label(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')), \n",
     "               rotation=270, labelpad=30)"
    ]
