Move a photutils notebook into the guide and add to toc

--- a/notebooks/photometry/01.04-Background-estimation.ipynb
+++ b/notebooks/photometry/01.04-Background-estimation.ipynb
@@ -4,13 +4,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Background Estimation with `photutils`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
     "<center><i>Made possible by the Astropy Project and ScienceBetter Consulting through financial support from the Community Software Initiative at the Space Telescope Science Institute.</i></center>\n",
     "\n",
     "<a id=\"title_ID\"></a>\n",
     "\n",
     "<a href=\"http://photutils.readthedocs.io/en/stable/index.html\"><img src=\"https://photutils.readthedocs.io/en/stable/_static/photutils_banner.svg\" width=300></a>\n",
     "\n",
-    "# Background Estimation with `photutils`\n",
+    "\n",
     "---"
    ]
   },
@@ -200,20 +209,22 @@
     "xdf_image_clipped = np.clip(xdf_image, 1e-4, None) # clip to plot with logarithmic stretch\n",
     "\n",
     "# Plot the data\n",
-    "fitsplot = ax1.imshow(np.ma.masked_where(xdf_image.mask, xdf_image_clipped), \n",
+    "fitsplot = ax1.imshow(np.ma.masked_where(xdf_image.mask, xdf_image_clipped),\n",
     "                      norm=norm_image, cmap=cmap)\n",
     "\n",
-    "# Define the colorbar... \n",
-    "cbar = plt.colorbar(fitsplot, fraction=0.046, pad=0.04, ticks=LogLocator(subs=range(10)))\n",
-    "cbar.ax.ticklabel_format(scilimits=(-2, -2), useOffset=False, useMathText=True, style='sci')\n",
+    "# Define the colorbar\n",
+    "cbar = plt.colorbar(fitsplot, fraction=0.046, pad=0.04, ticks=LogLocator())\n",
+    "\n",
+    "cbar.ax.yaxis.set_minor_locator(LogLocator(subs=range(1, 10)))\n",
     "\n",
     "# ...and force the labels to be displayed as powers of ten\n",
     "cbar.ax.set_yticks([1e-4, 1e-3, 1e-2])\n",
     "labels = [f'$10^{{{pow:.0f}}}$' for pow in np.log10(cbar.ax.get_yticks())]\n",
     "cbar.ax.set_yticklabels(labels)\n",
     "\n",
+    "\n",
     "# Define labels\n",
-    "cbar.set_label(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')), \n",
+    "cbar.set_label(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')),\n",
     "               rotation=270, labelpad=30)\n",
     "ax1.set_xlabel('X (pixels)')\n",
     "ax1.set_ylabel('Y (pixels)');"
@@ -269,7 +280,7 @@
     "ax1.set_title('Mask')\n",
     "\n",
     "# Plot the masked data\n",
-    "fitsplot = ax2.imshow(np.ma.masked_where(xdf_image.mask, xdf_image_clipped), \n",
+    "fitsplot = ax2.imshow(np.ma.masked_where(xdf_image.mask, xdf_image_clipped),\n",
     "                      norm=norm_image, cmap=cmap)\n",
     "\n",
     "# Define the colorbar and fix the labels\n",
@@ -278,11 +289,11 @@
     "\n",
     "# ...and force the labels to be displayed as powers of ten\n",
     "cbar.ax.set_yticks([1e-4, 1e-3, 1e-2])\n",
-    "labels = [f'$10^{{{pow:.0f}}}$' for pow in np.log10(cbar.ax.get_yticks())]                \n",
+    "labels = [f'$10^{{{pow:.0f}}}$' for pow in np.log10(cbar.ax.get_yticks())]\n",
     "cbar.ax.set_yticklabels(labels)\n",
     "\n",
     "\n",
-    "cbar.set_label(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')), \n",
+    "cbar.set_label(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')),\n",
     "               rotation=270, labelpad=30)\n",
     "ax2.set_xlabel('X (pixels)')\n",
     "ax2.set_title('Masked Data');"
@@ -458,10 +469,10 @@
     "\n",
     "# ...and force the labels to be displayed as powers of ten\n",
     "cbar.ax.set_yticks([1e-4, 1e-3, 1e-2])\n",
-    "labels = [f'$10^{{{pow:.0f}}}$' for pow in np.log10(cbar.ax.get_yticks())]                \n",
+    "labels = [f'$10^{{{pow:.0f}}}$' for pow in np.log10(cbar.ax.get_yticks())]\n",
     "cbar.ax.set_yticklabels(labels)\n",
     "\n",
-    "cbar.set_label(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')), \n",
+    "cbar.set_label(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')),\n",
     "               rotation=270, labelpad=30)"
    ]
   },
@@ -561,11 +572,11 @@
     "\n",
     "# ...and force the labels to be displayed as powers of ten\n",
     "cbar.ax.set_yticks([1e-4, 1e-3, 1e-2])\n",
-    "labels = [f'$10^{{{pow:.0f}}}$' for pow in np.log10(cbar.ax.get_yticks())]                \n",
+    "labels = [f'$10^{{{pow:.0f}}}$' for pow in np.log10(cbar.ax.get_yticks())]\n",
     "cbar.ax.set_yticklabels(labels)\n",
     "\n",
     "# Define labels\n",
-    "cbar.set_label(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')), \n",
+    "cbar.set_label(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')),\n",
     "               rotation=270, labelpad=30)\n",
     "ax1.set_xlabel('X (pixels)')\n",
     "ax1.set_ylabel('Y (pixels)')\n",
@@ -606,7 +617,7 @@
     "\n",
     "# Plot the scalar-subtracted data\n",
     "fitsplot = ax1.imshow(np.ma.masked_where(xdf_scalar_bkgdsub.mask, xdf_scalar_bkgdsub_clipped), norm=norm_image)\n",
-    "cbar.set_label(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')), \n",
+    "cbar.set_label(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')),\n",
     "               rotation=270, labelpad=30)\n",
     "ax1.set_ylabel('Y (pixels)')\n",
     "ax1.set_xlabel('X (pixels)')\n",
@@ -625,10 +636,10 @@
     "\n",
     "# ...and force the labels to be displayed as powers of ten\n",
     "cbar.ax.set_yticks([1e-4, 1e-3, 1e-2])\n",
-    "labels = [f'$10^{{{pow:.0f}}}$' for pow in np.log10(cbar.ax.get_yticks())]                \n",
+    "labels = [f'$10^{{{pow:.0f}}}$' for pow in np.log10(cbar.ax.get_yticks())]\n",
     "cbar.ax.set_yticklabels(labels)\n",
     "\n",
-    "cbar.set_label(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')), \n",
+    "cbar.set_label(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')),\n",
     "               rotation=270, labelpad=30)"
    ]
   },
@@ -710,7 +721,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
